infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: nayeemnishaat/client
          imagePullPolicy: IfNotPresent
          # resources:
          #   limits:
          #     memory: 2Gi
          #     cpu: 500m
---
apiVersion: v1
kind: Service
# Type is not defined, so it will be ClusterIP by default
metadata:
  name: client-svc
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000 # Host
      targetPort: 3000 # Pod
