infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args: [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi", # heartbeat interval -> NATS will send health check requests to clients in every 5 seconds
              "5s",
              "-hbt", # heartbeat timeout -> client has 5s to respond to heartbeat, otherwise it is considered temporary dead
              "5s",
              "-hbf", # heartbeat fail after -> after 2 failed heartbeats, client is considered permanently dead
              "2",
              "-SD",
              "-cid",
              "ticketing"
            ]
          # resources:
          #   limits:
          #     memory: 500Mi
          #     cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: nats-svc
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222 # Host
      targetPort: 4222 # Pod
    - name: monitoring
      protocol: TCP
      port: 8222 # Host
      targetPort: 8222 # Pod
