infra/k8s/order-depl.yaml
# Important: Always build the new image before running skaffold.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: nayeemnishaat/order
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
# Type is not defined, so it will be ClusterIP by default
metadata:
  name: order-svc
spec:
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 3000 # Host
      targetPort: 3000 # Pod
