infra/k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: nayeemnishaat/payment
---
apiVersion: v1
kind: Service
# Type is not defined, so it will be ClusterIP by default
metadata:
  name: payment-svc
spec:
  selector:
    app: payment
  ports:
    - name: payment
      protocol: TCP
      port: 3000 # Host
      targetPort: 3000 # Pod
