infra/k8s/ticket-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-mongo-depl
  # labels:
  #   app: ticket-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-mongo
  template:
    metadata:
      labels:
        app: ticket-mongo
    spec:
      containers:
        - name: ticket-mongo
          image: mongo # Important: If imagePull error occurs try to pull the image manually in the appropriate docker context. Note: Container creation error can occur if resources are too low.
          # Important: If cannot change context use minikube.exe image load mongo for loading the image into the minikube context manually.
          imagePullPolicy: IfNotPresent
          # resources:
          #   limits:
          #     memory: 1Gi
          #     cpu: 250m
          # ports:
          #   - containerPort: 27017
          # volumeMounts:
          #   - name: ticket-mongo-persistent-storage
          #     mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-mongo-svc
spec:
  selector:
    app: ticket-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017 # Host
      targetPort: 27017 # Pod
